bug fix: x axis extent should be such that it covers the dates for ALL data, not each data stream individually

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,7 @@
 // Colors
+$green-primary: #306d27;// #44843b;
+$blue-primary: #2b4d8c;
+
 $dark-grey: #333;
 $grey: #666;
 $blue: #1c88bf;
